[project]
name = "abs-data"
version = "0.1.0"
description = ""
authors = [
    {name = "David Wales",email = "david.wales@swsphn.com.au"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "polars (>=1.24.0,<2.0.0)",
    "fastexcel (>=0.13.0,<0.14.0)"
]

[project.scripts]
abs = 'abs_data:app'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
